--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
   background:rgb(40, 40, 40);
   color: rgb(236, 236, 236);
   font-family: 'Courier new';
-  font-size: .875em;
+  font-size: 1em;
   margin:0;
   padding:0;
   min-height: 100vh;
