--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
   display: flex;
   min-height: 100vh;
-  background: rgb(31, 31, 31);
+  background: rgb(40, 40, 40);
   color: rgb(236, 236, 236);
   font-family: 'Courier new';
   font-size: 16px;
@@ -13,7 +13,7 @@ body {
 
 header {
   display: grid;
-  background: rgb(20, 20, 20);
+  background: rgb(40, 40, 40);
   grid-template-columns: 1fr 0% 1in 9.5in 1in 0% 1fr;
   height: 6em;
 }
@@ -121,12 +121,22 @@ img.embedded-img,
   justify-content: center;
   align-items: center;
 }
+*/
+.colorbar{
+  height: 1px;
+  grid-column: 4/5;
+  border-radius:.5em;
+  margin-top: 5px;
+  background: linear-gradient(to right,rgb(100, 27, 155), rgb(219, 210, 35));
+  animation: gradient 10s ease infinite;
+  background-size:  400% 100%;
+
+}
 
 @keyframes gradient {
   0% {background-position: 0% 0%;}
 
-  50% {background-position: 0% 100%;}
+  50% {background-position: 100% 0%;}
 
   100% {background-position: 0% 0%;}
 }
-*/
