--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ header {
   padding: 1.5em 0em;
   grid-column: 5/6;
   margin-top: -4em;
+  margin-right: 1px;
 }
 
 a {
@@ -70,7 +71,7 @@ footer {
   }
 
   header {
-    grid-template-columns: 1fr 2.5% 0% 95% 0% 2.5% 1fr;
+    grid-template-columns: 1fr 1% 0% 95% 0% 1% 1fr;
   }
 }
 img.social {
@@ -82,7 +83,7 @@ img.social {
   opacity: 0.6;
 }
 .logo {
-    margin-left: 2.5%;
+    margin-left: 1px;
 }
 
 .top-img {
@@ -124,12 +125,11 @@ img.embedded-img,
 */
 .colorbar{
   height: 1px;
-  grid-column: 4/5;
-  border-radius:.5em;
+  grid-column: 2/7;
   margin-top: 5px;
-  background: linear-gradient(to right,rgb(100, 27, 155), rgb(219, 210, 35));
-  animation: gradient 10s ease infinite;
-  background-size:  400% 100%;
+  background: linear-gradient(to right,rgb(106, 13, 131),rgb(206, 73, 147),rgb(238, 93, 108),rgb(251, 144, 98),rgb(255, 201, 34));
+  animation: gradient 20s ease infinite;
+  background-size:  150% 100%;
 
 }
 
