--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@ a:hover {
 article {
   display: grid;
   grid-template-columns: 1fr .5in [start] 1in 8.5in 1in [end] .5in 1fr;
-  padding-bottom: 15rem;
+  padding-bottom: 80px;
 }
 
 article * {
@@ -88,14 +88,17 @@ img.social {
 
 .top-img {
   grid-column: 2/7;
+  margin-top: 1px;
 }
 
 .embedded-img {
   grid-column: 3/6;
+  margin-top: 1px;
 }
 
 .embedded-img2 {
   grid-column: 4/5;
+  margin-top: 1px;
 }
 
 img.top-img,
@@ -109,24 +112,11 @@ img.embedded-img,
   margin: 0 .1em;
 }
 
-/*div.sidebar{
-  height: 30em;
-  width: .25em;
-  border-radius:.5em;
-  position:flex ;
-  border: 1px outset rgba(0, 0, 0, 1);
-  background: linear-gradient(20deg, rgb(0, 82, 41) 10%, rgb(0, 35, 131) 70% );
-  background-size:  100% 400%;
-  animation: gradient 10s ease infinite;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-*/
 .colorbar{
   height: 1px;
   grid-column: 2/7;
   margin-top: 5px;
+  margin-bottom: 5px;
   background: linear-gradient(to right,rgb(106, 13, 131),rgb(206, 73, 147),rgb(238, 93, 108),rgb(251, 144, 98),rgb(255, 201, 34));
   animation: gradient 20s ease infinite;
   background-size:  150% 100%;
