--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
 body {
   display: flex;
   min-height: 100vh;
-  background: rgb(40, 40, 40);
+  background: rgb(45, 40, 44);
+  /*background: rgb(52, 50, 51);*/
   color: rgb(236, 236, 236);
   font-family: "Courier new";
   font-size: 16px;
@@ -14,7 +15,7 @@ body {
 
 header {
   display: grid;
-  background: rgb(40, 40, 40);
+  background: rgb(45, 40, 44);
   grid-template-columns: 1fr 0% 1in 9.5in 1in 0% 1fr;
   height: 6em;
 }
@@ -64,7 +65,7 @@ article * {
 }
 
 footer {
-  background-color: rgb(30, 30, 30);
+  background-color: rgb(35, 30, 33);
   height: 40px;
   padding: 12px;
   margin-top: auto;
