--- a/index.css
+++ b/index.css
@@ -1,8 +1,7 @@
 body {
   display: flex;
   min-height: 100vh;
-  background: rgb(45, 40, 44);
-  /*background: rgb(52, 50, 51);*/
+  background: rgb(18,16,17);
   color: rgb(236, 236, 236);
   font-family: "Courier new";
   font-size: 16px;
@@ -15,7 +14,7 @@ body {
 
 header {
   display: grid;
-  background: rgb(45, 40, 44);
+  background: rgb(18,16,17);
   grid-template-columns: 1fr 0% 1in 9.5in 1in 0% 1fr;
   height: 6em;
 }
@@ -65,7 +64,7 @@ article * {
 }
 
 footer {
-  background-color: rgb(35, 30, 33);
+  background: rgb(18,16,17);
   height: 40px;
   padding: 12px;
   margin-top: auto;
